--- a/leeuansuelto_q1gfa1.html
+++ b/leeuansuelto_q1gfa1.html
@@ -9,7 +9,7 @@
 
 	<p> Project name: leeuansuelto_q1gfa1 </p> <br>
 
-	<a href="https://tetr.io"><br>Git Hub Project Link</a>
+	<a href="https://github.com/UnrealAppol/leeuansuelto_q1gfa1"><br>Git Hub Project Link</a>
 	<a href="about_me.html"><br>About Me </a>
 	<br>
 	<hr>
